added node_modules to gitiignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,25 @@
+# Dependencies
+node_modules/
+package-lock.json
+
+# Compiled output
+dist/
+build/
+
+# Environment variables
 .env
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+
+# Editor directories and files
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# OS files
+.DS_Store
+Thumbs.db
